--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
   "repository": {
     "type": "git",
     "url": "git@github.com:yogaboll/react-npm-component-starter.git"
+  },
+  "dependencies": {
+    "@material-ui/core": "^3.0.1"
   }
 }
